# regional-energy-forecast

./: .env.example  .gitignore  .mailmap  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  003_weather_snapshots.py  004_audit_logs.py  005_model_runs.py  006_external_data_tables.py  007_fix_json_to_jsonb.py  2051b306c0c5_fix_datetime_columns_to_timestamptz.py
configs/: api.yaml  data_loader.yaml  monitoring.yaml  openmeteo.yaml  pipeline.yaml  settings.yaml  smoke_test.yaml
configs/features/: calendar.yaml  consumption.yaml  epias.yaml  solar.yaml  weather.yaml
configs/models/: catboost.yaml  ensemble.yaml  hyperparameters.yaml  prophet.yaml  tft.yaml
data/static/: turkish_holidays.parquet
docs/: M11-deployment-targets.md  SMOKE_TEST_PLAN.md  data-flow.md
docs/decisions/: ADR-001-data-leakage-audit.md
docs/plans/: M1-config-system.md  M2-data-pipeline.md  M3-feature-engineering.md  M5-catboost-training.md  M6-prophet-training.md  M7-ensemble.md  M8-tft-training.md  M9-3-model-ensemble.md
scripts/: _debug_utils.py  backfill_epias.py  backup_db.py  cleanup_jobs.py  debug_ensemble.py  fetch_profile_coefficients.py  generate_holidays.py  init-db.sql  prepare_dataset.py  promote_model.py  seed_db.py  seed_weather.py  smoke_test.py
scripts/runpod/: README.md  README_TR.md  apply_prod_config.sh  download_results.sh  pack_data.sh  pack_results.sh  restore_dev_config.sh  run_tft_smoke.sh  run_training.sh  run_training_r2.sh  setup_pod.sh
src/energy_forecast/: __init__.py
src/energy_forecast/config/: __init__.py  _loader.py  api.py  features.py  general.py  models.py  settings.py
src/energy_forecast/data/: __init__.py  epias_client.py  exceptions.py  loader.py  openmeteo_client.py  schemas.py
src/energy_forecast/db/: __init__.py  base.py  engine.py  models.py  sync_repos.py
src/energy_forecast/features/: __init__.py  base.py  calendar.py  consumption.py  custom.py  epias.py  pipeline.py  solar.py  weather.py
src/energy_forecast/jobs/: __init__.py  weather_actuals.py
src/energy_forecast/models/: __init__.py  base.py  catboost.py  ensemble.py  prophet.py  tft.py
src/energy_forecast/monitoring/: __init__.py  drift_detector.py
src/energy_forecast/serving/: __init__.py  app.py  exceptions.py  job_manager.py  schemas.py
src/energy_forecast/storage/: __init__.py  gdrive.py
src/energy_forecast/training/: __init__.py  catboost_trainer.py  cross_validation.py  ensemble_report.py  ensemble_stacking.py  ensemble_trainer.py  ensemble_utils.py  ensemble_weights.py  experiment.py  metrics.py  prophet_trainer.py  results.py  run.py  search.py  splitter.py  tft_trainer.py  tuning.py  utils.py
src/energy_forecast/utils/: __init__.py  logging.py  prophet_utils.py
tasks/: todo.md
tests/: conftest.py
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_config.py  test_smoke.py
tests/unit/test_data/: test_epias_client.py  test_epias_client_db.py  test_loader.py  test_openmeteo_client.py  test_schemas.py
tests/unit/test_db/: test_analytics_repo.py  test_audit_repo.py  (+7 more)
(+52 files in other folders)
