[project]
name = "energy-forecast"
version = "0.1.0"
description = "Uludag region hourly electricity consumption forecasting system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "catboost>=1.2",
    "prophet>=1.1",
    "pytorch-forecasting>=1.0",
    "pytorch-lightning>=2.0",
    "torch>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "pvlib>=0.11",
    "loguru>=0.7",
    "pydantic[email]>=2.5",
    "pydantic-settings>=2.1",
    "pandera>=0.18",
    "mlflow>=2.10",
    "optuna>=3.5",
    "tenacity>=8.2",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "openmeteo-requests>=1.3",
    "requests-cache>=1.2",
    "retry-requests>=2.0",
    "pyarrow>=15.0",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.7",
    "slowapi>=0.1.9",
    "holidays>=0.40",
    "feature-engine>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "commitizen>=3.14",
    "pandas-stubs>=2.1",
    "types-PyYAML>=6.0",
    "types-openpyxl>=3.1",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/energy_forecast"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "N803",  # sklearn convention: X for feature matrices
    "RUF001",  # Turkish characters in EPIAS/holiday strings are intentional
    "RUF002",  # Turkish characters in docstrings are intentional
]

[tool.ruff.lint.isort]
known-first-party = ["energy_forecast"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "catboost.*",
    "prophet.*",
    "pytorch_forecasting.*",
    "pytorch_lightning.*",
    "lightning.*",
    "pvlib.*",
    "sklearn.*",
    "mlflow.*",
    "optuna.*",
    "pandera.*",
    "openmeteo_requests.*",
    "openmeteo_sdk.*",
    "requests_cache.*",
    "retry_requests.*",
    "feature_engine.*",
    "scipy.*",
    "slowapi.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x --tb=short -q"
asyncio_mode = "auto"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"

[tool.coverage.run]
source = ["src/energy_forecast"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
]
